Fixed up internet settings and set up sync method